--- a/nexus_frontend/index.html
+++ b/nexus_frontend/index.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&display=swap"
         rel="stylesheet">
@@ -73,6 +74,92 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+        }
+
+        /* Markdown content styling */
+        .markdown-content h1 {
+            font-size: 2rem;
+            font-weight: bold;
+            margin: 1.5rem 0 1rem 0;
+            color: #f3f4f6;
+        }
+
+        .markdown-content h2 {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin: 1.25rem 0 0.75rem 0;
+            color: #e5e7eb;
+        }
+
+        .markdown-content h3 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin: 1rem 0 0.5rem 0;
+            color: #d1d5db;
+        }
+
+        .markdown-content p {
+            margin: 0.75rem 0;
+            line-height: 1.75;
+        }
+
+        .markdown-content strong {
+            font-weight: 700;
+            color: #f9fafb;
+        }
+
+        .markdown-content em {
+            font-style: italic;
+        }
+
+        .markdown-content ul,
+        .markdown-content ol {
+            margin: 0.75rem 0;
+            padding-left: 1.5rem;
+        }
+
+        .markdown-content li {
+            margin: 0.5rem 0;
+        }
+
+        .markdown-content code {
+            background: rgba(59, 130, 246, 0.1);
+            padding: 0.125rem 0.375rem;
+            border-radius: 0.25rem;
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 0.9em;
+            color: #60a5fa;
+        }
+
+        .markdown-content pre {
+            background: rgba(0, 0, 0, 0.5);
+            padding: 1rem;
+            border-radius: 0.5rem;
+            overflow-x: auto;
+            margin: 1rem 0;
+        }
+
+        .markdown-content pre code {
+            background: none;
+            padding: 0;
+            color: #d1d5db;
+        }
+
+        .markdown-content blockquote {
+            border-left: 4px solid #3b82f6;
+            padding-left: 1rem;
+            margin: 1rem 0;
+            color: #9ca3af;
+            font-style: italic;
+        }
+
+        .markdown-content a {
+            color: #60a5fa;
+            text-decoration: underline;
+        }
+
+        .markdown-content a:hover {
+            color: #93c5fd;
         }
     </style>
 </head>
@@ -217,15 +304,36 @@
         );
 
         const CustomAvatarBuilder = ({ isOpen, onClose, onSave, initialParams }) => {
-            const [params, setParams] = useState(initialParams || { formality: 5, intensity: 5, humor: 5, technical_depth: 5, emoji_usage: 5 });
+            const [params, setParams] = useState(initialParams || {
+                formality: 5,
+                intensity: 5,
+                humor: 5,
+                technical_depth: 5,
+                emoji_usage: 5
+            });
+
             if (!isOpen) return null;
+
             const Slider = ({ label, value, onChange, leftLabel, rightLabel }) => (
                 <div style={{ marginBottom: '1.5rem' }}>
-                    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '0.5rem', fontSize: '0.75rem', color: '#9ca3af', textTransform: 'uppercase', fontWeight: 'bold' }}><span>{label}</span><span style={{ color: '#3b82f6' }}>{value}/10</span></div>
-                    <input type="range" min="1" max="10" value={value} onChange={(e) => onChange(parseInt(e.target.value))} />
-                    <div style={{ display: 'flex', justifyContent: 'space-between', fontSize: '0.625rem', color: '#6b7280', marginTop: '0.25rem' }}><span>{leftLabel}</span><span>{rightLabel}</span></div>
+                    <div style={{ display: 'flex', justifyContent: 'space-between', marginBottom: '0.5rem', fontSize: '0.75rem', color: '#9ca3af', textTransform: 'uppercase', fontWeight: 'bold' }}>
+                        <span>{label}</span>
+                        <span style={{ color: '#3b82f6' }}>{value}/10</span>
+                    </div>
+                    <input
+                        type="range"
+                        min="1"
+                        max="10"
+                        value={value}
+                        onChange={(e) => onChange(parseInt(e.target.value))}
+                    />
+                    <div style={{ display: 'flex', justifyContent: 'space-between', fontSize: '0.625rem', color: '#6b7280', marginTop: '0.25rem' }}>
+                        <span>{leftLabel}</span>
+                        <span>{rightLabel}</span>
+                    </div>
                 </div>
             );
+
             return (
                 <div style={{
                     position: 'fixed',
@@ -256,12 +364,33 @@
                                 ×
                             </button>
                         </div>
+
                         <Slider label="Formality" value={params.formality} onChange={v => setParams({ ...params, formality: v })} leftLabel="Casual" rightLabel="Corporate" />
                         <Slider label="Intensity" value={params.intensity} onChange={v => setParams({ ...params, intensity: v })} leftLabel="Calm" rightLabel="Aggressive" />
                         <Slider label="Humor" value={params.humor} onChange={v => setParams({ ...params, humor: v })} leftLabel="Serious" rightLabel="Comedy" />
                         <Slider label="Tech Depth" value={params.technical_depth} onChange={v => setParams({ ...params, technical_depth: v })} leftLabel="Simple" rightLabel="Deep Tech" />
                         <Slider label="Emoji Density" value={params.emoji_usage} onChange={v => setParams({ ...params, emoji_usage: v })} leftLabel="None" rightLabel="Heavy" />
-                        <button onClick={() => onSave(params)} style={{ width: '100%', marginTop: '2rem', padding: '0.75rem', backgroundColor: '#3b82f6', color: 'white', fontWeight: 'bold', borderRadius: '0.75rem', border: 'none', cursor: 'pointer', transition: 'background-color 0.3s', fontSize: '1rem' }} onMouseEnter={(e) => e.currentTarget.style.backgroundColor = '#2563eb'} onMouseLeave={(e) => e.currentTarget.style.backgroundColor = '#3b82f6'}>Apply Custom Persona</button>
+
+                        <button
+                            onClick={() => onSave(params)}
+                            style={{
+                                width: '100%',
+                                marginTop: '2rem',
+                                padding: '0.75rem',
+                                backgroundColor: '#3b82f6',
+                                color: 'white',
+                                fontWeight: 'bold',
+                                borderRadius: '0.75rem',
+                                border: 'none',
+                                cursor: 'pointer',
+                                transition: 'background-color 0.3s',
+                                fontSize: '1rem'
+                            }}
+                            onMouseEnter={(e) => e.currentTarget.style.backgroundColor = '#2563eb'}
+                            onMouseLeave={(e) => e.currentTarget.style.backgroundColor = '#3b82f6'}
+                        >
+                            Apply Custom Persona
+                        </button>
                     </div>
                 </div>
             );
@@ -340,7 +469,7 @@
                         setFinalOutput(payload.final_output);
                         setActiveNode(null);
                         setMetrics(prev => ({ ...prev, iterations: payload.metrics.iterations || 0 }));
-                        addLog("SYSTEM", "🏁 Complete | Assets Ready");
+                        addLog("SYSTEM", "ðŸ Complete | Assets Ready");
                     }
                     if (payload.type === 'error') { setStatus('error'); addLog("ERROR", payload.message); }
                 };
@@ -349,7 +478,6 @@
 
             if (view === 'setup') {
                 return (
-                    // ... (Setup View Remains Exactly the Same)
                     <div style={{ minHeight: '100vh', width: '100%', display: 'flex', alignItems: 'center', justifyContent: 'center', background: 'radial-gradient(ellipse at center, #1f2937 0%, #050505 50%, #000000 100%)', padding: '1.5rem', overflowY: 'auto' }} className="custom-scrollbar">
                         <div style={{ width: '100%', maxWidth: '80rem', padding: '3rem 0' }}>
                             <div style={{ textAlign: 'center', marginBottom: '3rem' }}>
@@ -398,7 +526,6 @@
 
             return (
                 <div style={{ height: '100vh', width: '100%', display: 'flex', overflow: 'hidden', background: '#050505' }}>
-                    {/* LEFT SIDEBAR: FLIGHT DECK */}
                     <div style={{ width: '20rem', borderRight: '1px solid #1f2937', background: '#0a0a0a', display: 'flex', flexDirection: 'column', height: '100%', overflow: 'hidden' }}>
                         <div style={{ padding: '1.5rem', borderBottom: '1px solid #1f2937' }}>
                             <div style={{ display: 'flex', alignItems: 'center', gap: '0.75rem', marginBottom: '0.25rem' }}>
@@ -436,9 +563,7 @@
                         </div>
                     </div>
 
-                    {/* CENTER: MAIN ACTION AREA (CHANGES BASED ON STATUS) */}
                     <div style={{ flex: 1, background: '#050505', position: 'relative', display: 'flex', flexDirection: 'column', height: '100%', overflow: 'hidden' }}>
-                        {/* Header */}
                         <div style={{ height: '4rem', borderBottom: '1px solid #1f2937', display: 'flex', alignItems: 'center', justifyContent: 'space-between', padding: '0 2rem', background: '#0a0a0a' }}>
                             <div style={{ display: 'flex', alignItems: 'center', gap: '1rem' }}>
                                 {view === 'war-room' && <button onClick={goBackToSetup} title="Back to Setup" style={{ padding: '0.25rem 0.5rem', borderRadius: '0.5rem', background: 'transparent', border: '1px solid #2d3748', color: '#9ca3af', cursor: 'pointer', fontSize: '0.875rem' }} onMouseEnter={(e) => e.currentTarget.style.borderColor = '#3b82f6'} onMouseLeave={(e) => e.currentTarget.style.borderColor = '#2d3748'}>← Back</button>}
@@ -448,17 +573,14 @@
                             {status === 'complete' && <button onClick={() => navigator.clipboard.writeText(finalOutput)} style={{ background: 'white', color: 'black', padding: '0.5rem 1rem', borderRadius: '0.5rem', fontSize: '0.875rem', fontWeight: 'bold', border: 'none', cursor: 'pointer', transition: 'background-color 0.3s', display: 'flex', alignItems: 'center', gap: '0.5rem' }}>✅ Copy to Clipboard</button>}
                         </div>
 
-                        {/* Content Area */}
                         <div style={{ flex: 1, padding: '3rem', overflowY: 'auto', position: 'relative' }} className="custom-scrollbar">
                             <div className="scan-effect" style={{ opacity: 0.2, pointerEvents: 'none' }}></div>
 
-                            {/* LOGIC SWITCH: If processing, show Graph. If complete, show Text. */}
                             {status !== 'complete' ? (
                                 <div style={{ height: '100%', display: 'flex', flexDirection: 'column', alignItems: 'center', justifyContent: 'center' }} className="fade-in">
                                     <h2 style={{ color: '#3b82f6', marginBottom: '0', textTransform: 'uppercase', letterSpacing: '0.1em', animation: 'pulse 2s infinite', fontSize: '0.875rem', fontWeight: 'bold' }}>
                                         Neural Link Active: Processing
                                     </h2>
-                                    {/* Centered Graph Container */}
                                     <div style={{ width: '100%', maxWidth: '600px', height: '550px', position: 'relative' }}>
                                         <NeuralGraph activeNode={activeNode} />
                                     </div>
@@ -468,17 +590,17 @@
                                 </div>
                             ) : (
                                 <div style={{ maxWidth: '48rem', margin: '0 auto', paddingBottom: '6rem' }} className="fade-in">
-                                    <div style={{ fontSize: '1.125rem', lineHeight: '1.75' }}>
-                                        <div className="typing-cursor" style={{ whiteSpace: 'pre-wrap', fontFamily: 'sans-serif', color: '#d1d5db' }}>
-                                            {finalOutput || draftText}
-                                        </div>
-                                    </div>
+                                    <div
+                                        className="markdown-content"
+                                        dangerouslySetInnerHTML={{
+                                            __html: marked.parse(finalOutput || draftText || '')
+                                        }}
+                                    />
                                 </div>
                             )}
                         </div>
                     </div>
 
-                    {/* RIGHT SIDEBAR: ONLY ACTIVE AGENT INSIGHT */}
                     <div style={{ width: '20rem', background: '#080808', borderLeft: '1px solid #1f2937', display: 'flex', flexDirection: 'column', height: '100%', overflow: 'hidden' }}>
                         <div style={{ padding: '1.5rem', borderBottom: '1px solid #1f2937' }}>
                             <h2 style={{ fontWeight: 'bold', color: 'white', letterSpacing: '0.05em', display: 'flex', alignItems: 'center', gap: '0.5rem', margin: 0 }}>
