--- a/nexus_frontend/index.html
+++ b/nexus_frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Prime | Cognitive Content Engine</title>
+    <title>Contento AI| Cognitive Content Engine</title>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -484,7 +484,7 @@
                                 <div style={{ display: 'inline-flex', alignItems: 'center', justifyContent: 'center', padding: '0.75rem', backgroundColor: 'rgba(59, 130, 246, 0.1)', borderRadius: '1rem', marginBottom: '1rem', border: '1px solid rgba(59, 130, 246, 0.2)' }}>
                                     <span style={{ fontSize: '2rem' }}>⚡</span>
                                 </div>
-                                <h1 style={{ fontSize: '4rem', fontWeight: 'bold', letterSpacing: '-0.05em', background: 'linear-gradient(to right, white, #93c5fd, #6b7280)', WebkitBackgroundClip: 'text', WebkitTextFillColor: 'transparent', backgroundClip: 'text', marginBottom: '1rem', margin: '0 0 1rem 0' }}>NEXUS PRIME</h1>
+                                <h1 style={{ fontSize: '4rem', fontWeight: 'bold', letterSpacing: '-0.05em', background: 'linear-gradient(to right, white, #93c5fd, #6b7280)', WebkitBackgroundClip: 'text', WebkitTextFillColor: 'transparent', backgroundClip: 'text', marginBottom: '1rem', margin: '0 0 1rem 0' }}>Contento AI</h1>
                                 <p style={{ color: '#9ca3af', fontSize: '1.125rem', maxWidth: '48rem', margin: '0 auto' }}>The Cognitive Content Engine. Select your archetype and dominate the feed.</p>
                             </div>
                             <div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(200px, 1fr))', gap: '1rem', marginBottom: '2rem' }}>
